--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "es2022",
+    "module": "ESNext",
+    "target": "ES2020",
     "moduleResolution": "node",
-    "lib": ["es2022"],
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "outDir": "./dist",
+    "skipLibCheck": true,
+    "downlevelIteration": true,
     "strict": true
   }
 }
