--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,14 @@
     "module": "ESNext",
     "target": "ES2020",
     "moduleResolution": "node",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "downlevelIteration": true,
     "strict": true
-  }
+  },
+  "exclude": [
+    "**/*.spec.ts",
+    "node_modules"
+  ]
 }
